--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ function undisplayInfo(id){
   <!--================================================================-->
 
   <span id="videos" class="undisplayed" align="right">
-    <iframe width="560" height="315" src="about:blank" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/f7xMGTE7D5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </span>
 
   <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
