video test weer

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ var jsonvideo = (function() {
 
 // Checks the dictionary for an entry that matches 'text' and sends the SiGML code to the avatar
 function toSiGML(text){
-  playText(json[text]);
+  changeVideo(jsonvideo[text]);
   // if (document.getElementById("avatar").checked) {
   //   playText(json[text]);
   // }
