--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ function undisplayInfo(id){
   document.getElementById(id).setAttribute("class", "undisplayed");
 }
 
-//Clicks on the page set as default to make sure it is diplayed when the page is loaded
+
 
 
 </script>
@@ -343,6 +343,7 @@ function undisplayInfo(id){
   <p>The avatar software used for displaying the translations has been provided by John Glauert.</p>
 </div>
 
+<!-- Clicks on the page set as default to make sure it is diplayed when the website is loaded -->
 <script>document.getElementById("defaultOpen").click();</script>
 </body>
 </html>
