--- a/index.html
+++ b/index.html
@@ -263,19 +263,19 @@ function undisplayInfo(id){
 
   <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
-  <span id="infoAvatar" class="undisplayed">
+  <span id="infoAvatar" class="undisplayed" align="right">
     <p>Displays the translation using an avatar</p>
   </span>
   <br>
   <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
   <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
-  <span id="infoAvatar" class="undisplayed">
+  <span id="infoAvatar" class="undisplayed" align="right">
     <p>Displays the translation using a video</p>
   </span>
   <br>
   <input type="radio" id="freestyle" name="display" value="freestyle" onclick="changeFunc(this);">
   <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
-  <span id="infoAvatar" class="undisplayed">
+  <span id="infoAvatar" class="undisplayed" align="right">
     <p>Attempts to translate any sentence into NGT (experimental)</p>
   </span>
     <br>
