--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ function toSiGML(text){
     playText(json[text]);
   }
   // if video is checked, source of embedded video changes
-  else if (document.getElementById("video").checked) {
+  else if (document.getElementById("videoDisplay").checked) {
     changeVideo(jsonvideo[text]);
   }
 }
