--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function playText(stext) {
 // verandert de source van de embedded video
 function changeVideo(text) {
   document.getElementById('videos').src = text
-  document.getElementById('videos').contentWindow.location.reload(); //hoort niet te hoeven
+  // document.getElementById('videos').contentWindow.location.reload(); //hoort niet te hoeven
 }
 
 function addStatus(evt) {
