--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function playText(stext) {
 
 // verandert de source van de embedded video
 function changeVideo(text) {
-  document.getElementById('videos').src = text
+  document.getElementById('videos').src = text;
   // document.getElementById('videos').contentWindow.location.reload(); //hoort niet te hoeven
 }
 
@@ -138,7 +138,7 @@ var jsonvideo = (function() {
 // Checks the dictionary for an entry that matches 'text' and sends the SiGML code to the avatar
 function toSiGML(text){
   // if avatar is checked, sigml is sent
-  if (document.getElementById("avatarDisplay").checked) { 
+  if (document.getElementById("avatarDisplay").checked) {
     playText(json[text]);
   }
   // if video is checked, source of embedded video changes
