--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ function playText(stext) {
 // verandert de source van de embedded video
 function changeVideo(text) {
   document.getElementById('videos').src = text;
+  document.write(document.getElementById('videos').src);
   // document.getElementById('videos').contentWindow.location.reload(); //hoort niet te hoeven
 }
 
