--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@ function undisplayInfo(id){
 
   <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');" style="position: relative;"></i>
-  <span id="infoAvatar" class="undisplayed" align="right">
-    <p>Displays the translation using an avatar</p>
-  </span>
+  <p id="infoAvatar" class="undisplayed" align="right">
+  Displays the translation using an avatar
+  </p>
   <br>
   <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
   <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
