--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function playText(stext) {
 // verandert de source van de embedded video
 function changeVideo(text) {
   document.getElementById('videos').src = text;
-  document.write(document.getElementById('videos').src);
+  document.getElementById('test').innerHTML = document.getElementById('videos').src;
   // document.getElementById('videos').contentWindow.location.reload(); //hoort niet te hoeven
 }
 
@@ -242,7 +242,7 @@ function undisplayInfo(id){
 
 <!--================================================================-->
 <h3>Interface ZonMW COVID-19 Project!</h3>
-
+<p id="test"></p>
 <div class="tab" align="center">
   <button class="tablinks" onclick="openPage(event, 'Home')">Home</button>
   <button id="defaultOpen" class="tablinks" onclick="openPage(event, 'Translate')">Translate to NGT</button>
