--- a/index.html
+++ b/index.html
@@ -271,14 +271,14 @@ function undisplayInfo(id){
   </p>
   <br>
   <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
-  <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
-  <span id="infoAvatar" class="undisplayed" align="right">
+  <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoVideo');" onmouseout="undisplayInfo('infoVideo');"></i>
+  <span id="infoVideo" class="undisplayed" align="right">
     <p>Displays the translation using a video</p>
   </span>
   <br>
   <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
-  <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
-  <span id="infoAvatar" class="undisplayed" align="right">
+  <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoFreestyle');" onmouseout="undisplayInfo('infoFreestyle');"></i>
+  <span id="infoFreestyle" class="undisplayed" align="right">
     <p>Attempts to translate any sentence into NGT (experimental)</p>
   </span>
     <br>
