--- a/index.html
+++ b/index.html
@@ -266,19 +266,20 @@ function undisplayInfo(id){
 
   <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');" style="position: relative;"></i>
-  <p id="infoAvatar" class="undisplayed">
-  Displays the translation using an avatar
-  </p>
+  <span id="infoAvatar" class="undisplayed" align="left">
+    <p>Displays the translation using an avatar</p>
+  </span>
+  
   <br>
   <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
   <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoVideo');" onmouseout="undisplayInfo('infoVideo');"></i>
-  <span id="infoVideo" class="undisplayed" align="right">
+  <span id="infoVideo" class="undisplayed" align="left">
     <p>Displays the translation using a video</p>
   </span>
   <br>
   <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
   <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoFreestyle');" onmouseout="undisplayInfo('infoFreestyle');"></i>
-  <span id="infoFreestyle" class="undisplayed" align="right">
+  <span id="infoFreestyle" class="undisplayed" align="left">
     <p>Attempts to translate any sentence into NGT (experimental)</p>
   </span>
     <br>
