--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ function undisplayInfo(id){
   <!--================================================================-->
 
   <span id="videos" class="prerecorded" align="right">
-    <iframe width="560" height="315" src="about:blank" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
   </span>
 
   <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
