--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ function undisplayInfo(id){
   <span id="avatar" class="CWASAAvatar av0" align="right" ></span>
   <!--================================================================-->
 
-  <span id="videos" class="prerecorded" align="right">
+  <span id="videos" class="undisplayed" align="right">
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
   </span>
 
