--- a/index.html
+++ b/index.html
@@ -260,8 +260,10 @@ function undisplayInfo(id){
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
   </span>
 
-  <span align="right" style="vertical-align: top;margin:30px;">
+  <span align="right" style="display: inline-block; vertical-align: top;margin:30px;">
   <label for="option">Choose a display option:</label>
+  <br>
+
   <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');" style="position: relative;"></i>
   <span id="infoAvatar" class="undisplayed" align="right">
