--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ function undisplayInfo(id){
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
   </span>
 
-  <span align="center" style="display:inline-block; vertical-align: top;margin:30px;">
+  <span align="left" style="display:inline-block; vertical-align: top;margin:30px;">
   <label for="option">Choose a display option:</label>
   <br>
 
