--- a/index.html
+++ b/index.html
@@ -266,9 +266,7 @@ function undisplayInfo(id){
 
   <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
-  <!-- <span id="infoAvatar" class="undisplayed" align="right"> -->
-    <p id="infoAvatar" class="undisplayed" align="right">Displays the translation using an avatar</p>
-  <!-- </span> -->
+  <span id="infoAvatar" class="undisplayed" align="right">Displays the translation using an avatar</span>
 
   <br>
   <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
