--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ function undisplayInfo(id){
   <button class="tablinks" onclick="openPage(event, 'Software')">Software</button>
 </div>
 
-<div id="Translate" class="tabcontent" align="center">
+<div id="Translate" class="tabcontent" align="center" width="100%">
   <!-- CWA signing avatar panel 0 -->
   <!--================================================================-->
   <!-- <div class="CWASAPanel av0" align="center" ></div> -->
