--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ function undisplayInfo(id){
 
   <br>
   <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
-  <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoFreestyle');" onmouseout="undisplayInfo('infoFreestyle');"></i>
+  <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoFreestyle');" onmouseout="undisplayInfo('infoFreestyle');" style="margin-right:-20px"></i>
   <span id="infoFreestyle" class="undisplayed" align="right">
     Attempts to translate any sentence into NGT (experimental)
   </span>
