--- a/index.html
+++ b/index.html
@@ -264,28 +264,31 @@ function undisplayInfo(id){
   <label for="option">Choose a display option:</label>
   <br>
 
-  <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
-  <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
-  <span id="infoAvatar" class="undisplayed" align="right">
-    Displays the translation using an avatar
+  <span>
+    <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
+    <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
+    <span id="infoAvatar" class="undisplayed" align="right">
+      Displays the translation using an avatar
+    </span>
   </span>
-
+  
   <br>
-  <br>
-  <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
-  <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoVideo');" onmouseout="undisplayInfo('infoVideo');"></i>
-  <span id="infoVideo" class="undisplayed" align="right">
-    Displays the translation using a video
+  <span style="margin-bottom: -20px; margin-top: -20px">
+    <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
+    <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoVideo');" onmouseout="undisplayInfo('infoVideo');"></i>
+    <span id="infoVideo" class="undisplayed" align="right">
+      Displays the translation using a video
+    </span>
   </span>
-
+  
+  <span>
   <br>
-  <br>
-  <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
-  <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoFreestyle');" onmouseout="undisplayInfo('infoFreestyle');" style="margin-right:-20px"></i>
-  <span id="infoFreestyle" class="undisplayed" align="right" style="max-width: 50px">
-    Attempts to translate any sentence into NGT (experimental)
+    <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
+    <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoFreestyle');" onmouseout="undisplayInfo('infoFreestyle');"></i>
+    <span id="infoFreestyle" class="undisplayed" align="right" style="max-width: 50px">
+      Attempts to translate any sentence into NGT (experimental)
+    </span>
   </span>
-    <br>
 
     <br>
     Enter Sentence:
