--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@ function undisplayInfo(id){
     </span>
   </span>
   
-  <span>
-  <br>
+   <br>
+  <span style="margin-right: -100px">
     <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
     <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoFreestyle');" onmouseout="undisplayInfo('infoFreestyle');"></i>
-    <span id="infoFreestyle" class="undisplayed" align="right" style="max-width: 50px">
+  </span>
+  <span id="infoFreestyle" class="undisplayed" align="right" style="max-width: 50px">
       Attempts to translate any sentence into NGT (experimental)
-    </span>
   </span>
 
     <br>
