--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ function undisplayInfo(id){
     <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   </span>
   <span id="infoVideo" class="undisplayed">
-      Displays the translation using a video
+    <p>Displays the translation using a video</p> 
   </span>
   
   <br>
