--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@ function undisplayInfo(id){
     <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   </span>
   <span id="infoVideo" class="undisplayed">
-    <p>Displays the translation using a video</p> 
+    <p style="background-color: #8c8c8c;padding-top: 1px;padding-bottom: 1px;display: inline-block;">
+     Displays the translation using a video
+   </p> 
   </span>
   
   <br>
