--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ function undisplayInfo(id){
   </span>
 
   <br>
-  <span style="margin-right: -25px">
+  <span style="margin-right: -25px; margin-bottom: 2px">
     <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
     <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   </span>
@@ -279,7 +279,7 @@ function undisplayInfo(id){
   </span>
   
   <br>
-  <span style="margin-right: -25px">
+  <span style="margin-right: -25px; margin-top: -2px">
     <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
     <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoVideo');" onmouseout="undisplayInfo('infoVideo');"></i>
   </span>
