--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ function undisplayInfo(id){
     <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
     <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   </span>
-  <span id="infoVideo" class="undisplayed">
+  <span id="infoVideo">
     <p style="background-color: #8c8c8c;padding-top: 1px;padding-bottom: 1px;display: inline-block;">
      Displays the translation using a video
    </p> 
