--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@ function undisplayInfo(id){
     <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
     <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   </span>
-  <span id="infoVideo">
+  <span id="infoVideo" style="margin:0px">
     <p style="background-color: #8c8c8c;display: inline-block;">
      Displays the translation using a video
    </p> 
   </span>
   
-  <!-- <br> -->
+  <br>
   <span style="margin-right: -25px; margin-top: -5px">
     <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
     <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoVideo');" onmouseout="undisplayInfo('infoVideo');"></i>
