--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ function undisplayInfo(id){
     <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   </span>
   <span id="infoVideo" style="margin:0px">
-    <p style="background-color: #8c8c8c;display: inline-block; margin: 0px">
+    <p style="background-color: #8c8c8c;display: inline-block; margin: 3px; position: relative; z-index: 2">
      Displays the translation using a video
    </p> 
   </span>
