--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ function undisplayInfo(id){
     <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
     <label for="avatar" style="margin-right: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   </span>
-  <p id="infoVideo" style="background-color: #8c8c8c; padding: 1px; margin: 0px; position: relative; z-index: 2">
+  <p id="infoVideo" style="background-color: #8c8c8c; margin: 0px; position: relative; z-index: 2">
     Displays the translation using a video
   </p> 
   
