--- a/index.html
+++ b/index.html
@@ -270,16 +270,18 @@ function undisplayInfo(id){
   <br>
   <span style="margin-right: -25px; margin-bottom: -5px">
     <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
-    <label for="avatar" style="margin-right: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
+    <label for="avatar" style="margin-right: 5px">Avatar</label>
+    <i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   </span>
-  <p id="infoVideo" style="background-color: #8c8c8c; margin: 0px; position: relative; z-index: 2">
+  <span id="infoVideo" class="undisplayed" style="margin: 0px">
     Displays the translation using a video
-  </p> 
+  </span>
   
   <br>
   <span style="margin-right: -25px; margin-top: -5px">
     <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
-    <label for="video" style="margin-right: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoVideo');" onmouseout="undisplayInfo('infoVideo');"></i>
+    <label for="video" style="margin-right: 5px">Video</label>
+    <i class="fa fa-question-circle" onmouseenter="displayInfo('infoVideo');" onmouseout="undisplayInfo('infoVideo');"></i>
   </span>
   <span id="infoFreestyle" class="undisplayed" style="margin: 0px">
     Attempts to translate any sentence into NGT (experimental)
@@ -288,7 +290,8 @@ function undisplayInfo(id){
    <br>
   <span>
     <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
-    <label for="freestyle" style="margin-right: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoFreestyle');" onmouseout="undisplayInfo('infoFreestyle');"></i>
+    <label for="freestyle" style="margin-right: 5px">Freestyle with Avatar</label>
+    <i class="fa fa-question-circle" onmouseenter="displayInfo('infoFreestyle');" onmouseout="undisplayInfo('infoFreestyle');"></i>
   </span>
 
     <br>
