--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ function undisplayInfo(id){
     <label for="video" style="margin-right: 5px">Video</label>
     <i class="fa fa-question-circle" onmouseenter="displayInfo('infoVideo');" onmouseout="undisplayInfo('infoVideo');"></i>
   </span>
-  <span id="infoFreestyle" class="undisplayed" style="margin: 0px; width: 400px; padding: 3px; display: inline-block;">
+  <span id="infoFreestyle" class="undisplayed" style="margin: 0px; padding: 3px; display: inline-block;">
     Attempts to translate any sentence into NGT (experimental)
   </span>
   
